--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel <your entry file>",
-    "build": "parcel build <your entry file>"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html --public -url / goit-js-hw-12-countries/",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,12 @@
   "bugs": {
     "url": "https://github.com/SerhiyStepanov/goit-js-hw-12-countries/issues"
   },
-  "homepage": "https://github.com/SerhiyStepanov/goit-js-hw-12-countries#readme",
+  "homepage": "https://SerhiyStepanov.github.com/goit-js-hw-12-countries",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-nuke-dist": "^1.0.1"
+  },
+  "dependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
