--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "gh-pages": "^3.1.0",
     "lodash.debounce": "^4.0.8",
-    "parcel-plugin-handlebars": "^0.4.4"
+    "parcel-plugin-handlebars": "^0.4.4",
+    "src": "^1.1.2"
   }
 }
