--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   "homepage": "https://SerhiyStepanov.github.com/goit-js-hw-12-countries",
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1"
   },
   "dependencies": {
     "gh-pages": "^3.1.0",
-    "lodash.debounce": "^4.0.8",
-    "parcel-plugin-handlebars-precompile": "^1.0.2",
-    "src": "^1.1.2"
+    "lodash.debounce": "^4.0.8"
   }
 }
