--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   },
   "homepage": "https://SerhiyStepanov.github.com/goit-js-hw-12-countries",
   "devDependencies": {
+    "@pnotify/core": "^5.1.2",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1"
   },
   "dependencies": {
+    "@pnotify/mobile": "^5.1.2",
     "gh-pages": "^3.1.0",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "material-design-icon-fonts": "^3.0.1",
+    "material-design-icons": "^3.0.1"
   }
 }
